--- a/module2-soln/styles.css
+++ b/module2-soln/styles.css
@@ -7,7 +7,9 @@
 
 h1 {
   text-align: center;
-  margin-bottom: 50px
+  margin-bottom: 50px;
+  font-size: 175%;
+
 }
 
 .container {
@@ -39,6 +41,7 @@ h1 {
   text-align: center;
   font-weight: bold;
   margin: 0;
+  font-size: 125%;
 }
 
 .title.first {
